add exempt url